--- a/viewer.html
+++ b/viewer.html
@@ -1,127 +1,164 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Split Screen Viewer</title>
+  <title>Viewer Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
       margin: 0;
+      padding: 0;
       height: 100%;
       overflow: hidden;
       display: flex;
       flex-direction: column;
+      background: black;
     }
+
     .screen {
-      flex: 1;
       position: relative;
+      flex: 1;
+      width: 100%;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+
+    .flipped {
+      transform: rotate(180deg);
+    }
+
+    .iframe-wrapper {
+      width: 100%;
+      height: 100%;
+    }
+
     iframe {
       width: 100%;
       height: 100%;
       border: none;
     }
-    .controls {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      z-index: 10;
-    }
-    button {
-      margin: 0 5px;
-    }
+
     .separator {
-      height: 6px;
-      background: black;
+      height: 8px;
+      background-color: grey;
     }
   </style>
 </head>
 <body>
-  <div class="screen" id="topScreen">
-    <div class="controls">
-      <button onclick="prevVideo('top')">⏮️</button>
-      <button onclick="nextVideo('top')">⏭️</button>
-    </div>
-    <iframe id="topFrame" allow="autoplay"></iframe>
+
+  <!-- Top Screen -->
+  <div class="screen flipped" id="topScreen">
+    <div class="iframe-wrapper" id="topIframeWrapper"></div>
   </div>
+
+  <!-- Separator -->
   <div class="separator"></div>
+
+  <!-- Bottom Screen -->
   <div class="screen" id="bottomScreen">
-    <div class="controls">
-      <button onclick="prevVideo('bottom')">⏮️</button>
-      <button onclick="nextVideo('bottom')">⏭️</button>
-    </div>
-    <iframe id="bottomFrame" allow="autoplay"></iframe>
+    <div class="iframe-wrapper" id="bottomIframeWrapper"></div>
   </div>
 
   <script>
-    const urlParams = new URLSearchParams(window.location.search);
-
-    const topMode = urlParams.get('topMode');
-    const bottomMode = urlParams.get('bottomMode');
-    const mute = urlParams.get('mute');
-
-    let topVideos = [];
-    let bottomVideos = [];
-    let topIndex = 0;
-    let bottomIndex = 0;
-
-    if (topMode === 'playlist') {
-      for (let i = 1; i <= 5; i++) {
-        const url = urlParams.get('topPlaylist' + i);
-        if (url) topVideos.push(url);
-      }
-    } else {
-      topVideos.push(urlParams.get('topUrl'));
+    // Function to get query parameters from the URL
+    function getQueryParams() {
+      const params = new URLSearchParams(window.location.search);
+      return {
+        topType: params.get("topType"),       // video or playlist
+        bottomType: params.get("bottomType"),
+        topUrl: params.get("topUrl"),
+        bottomUrl: params.get("bottomUrl"),
+        topPlaylistUrls: [
+          params.get("topUrl1"),
+          params.get("topUrl2"),
+          params.get("topUrl3"),
+          params.get("topUrl4"),
+          params.get("topUrl5")
+        ].filter(Boolean),
+        bottomPlaylistUrls: [
+          params.get("bottomUrl1"),
+          params.get("bottomUrl2"),
+          params.get("bottomUrl3"),
+          params.get("bottomUrl4"),
+          params.get("bottomUrl5")
+        ].filter(Boolean),
+        mute: params.get("mute") // "top" or "bottom" or null
+      };
     }
 
-    if (bottomMode === 'playlist') {
-      for (let i = 1; i <= 5; i++) {
-        const url = urlParams.get('bottomPlaylist' + i);
-        if (url) bottomVideos.push(url);
-      }
-    } else {
-      bottomVideos.push(urlParams.get('bottomUrl'));
+    function createYouTubeEmbed(url, muted) {
+      const embedUrl = convertToYouTubeEmbed(url);
+      return `<iframe src="${embedUrl}${muted ? '?mute=1' : ''}" allow="autoplay; encrypted-media" allowfullscreen></iframe>`;
     }
 
-    function updateFrame(screen, index) {
-      const frame = document.getElementById(screen + 'Frame');
-      const videos = screen === 'top' ? topVideos : bottomVideos;
-      if (frame && videos[index]) {
-        frame.src = videos[index];
-      }
+    function convertToYouTubeEmbed(url) {
+      const videoIdMatch = url.match(/(?:v=|\.be\/)([a-zA-Z0-9_-]+)/);
+      return videoIdMatch ? `https://www.youtube.com/embed/${videoIdMatch[1]}` : url;
     }
 
-    function nextVideo(screen) {
-      if (screen === 'top') {
-        topIndex = (topIndex + 1) % topVideos.length;
-        updateFrame('top', topIndex);
+    function renderPlayer(containerId, type, url, playlist, muted) {
+      const container = document.getElementById(containerId);
+      if (type === "playlist" && playlist.length > 0) {
+        let currentIndex = 0;
+
+        function updateIframe() {
+          const videoUrl = playlist[currentIndex];
+          container.innerHTML = createYouTubeEmbed(videoUrl, muted);
+        }
+
+        updateIframe();
+
+        const nav = document.createElement("div");
+        nav.style.position = "absolute";
+        nav.style.bottom = "10px";
+        nav.style.left = "50%";
+        nav.style.transform = "translateX(-50%)";
+        nav.style.zIndex = 10;
+
+        const prevBtn = document.createElement("button");
+        prevBtn.textContent = "◀ Prev";
+        prevBtn.onclick = () => {
+          currentIndex = (currentIndex - 1 + playlist.length) % playlist.length;
+          updateIframe();
+        };
+
+        const nextBtn = document.createElement("button");
+        nextBtn.textContent = "Next ▶";
+        nextBtn.onclick = () => {
+          currentIndex = (currentIndex + 1) % playlist.length;
+          updateIframe();
+        };
+
+        nav.appendChild(prevBtn);
+        nav.appendChild(nextBtn);
+        container.appendChild(nav);
       } else {
-        bottomIndex = (bottomIndex + 1) % bottomVideos.length;
-        updateFrame('bottom', bottomIndex);
+        container.innerHTML = createYouTubeEmbed(url, muted);
       }
     }
 
-    function prevVideo(screen) {
-      if (screen === 'top') {
-        topIndex = (topIndex - 1 + topVideos.length) % topVideos.length;
-        updateFrame('top', topIndex);
-      } else {
-        bottomIndex = (bottomIndex - 1 + bottomVideos.length) % bottomVideos.length;
-        updateFrame('bottom', bottomIndex);
-      }
-    }
+    const params = getQueryParams();
 
-    // Set initial frames
-    updateFrame('top', topIndex);
-    updateFrame('bottom', bottomIndex);
+    // Top screen
+    renderPlayer(
+      "topIframeWrapper",
+      params.topType,
+      params.topUrl,
+      params.topPlaylistUrls,
+      params.mute === "top"
+    );
 
-    // Mute handling (best-effort; true mute needs JS control over video players like YouTube API)
-    if (mute === 'top') {
-      document.getElementById('topFrame').setAttribute('allow', '');
-    } else if (mute === 'bottom') {
-      document.getElementById('bottomFrame').setAttribute('allow', '');
-    }
+    // Bottom screen
+    renderPlayer(
+      "bottomIframeWrapper",
+      params.bottomType,
+      params.bottomUrl,
+      params.bottomPlaylistUrls,
+      params.mute === "bottom"
+    );
   </script>
+
 </body>
 </html>
